# tog-discord-bingo

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
128/: 128.xlsx
src/: error.rs  fonts.rs  lib.rs  main.rs  spreadsheet.rs
src/algo/: default.rs  great_war.rs  mod.rs
src/game/: great_war.rs  mod.rs  normal.rs
tests/128/: 128.xlsx
