[package]
name = "bingo"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/RoloEdits/tog-discord-bingo"

[dependencies]
mimalloc = "0.1.45"
eframe = "0.31"
egui_extras = "0.31"
image = "0.25"
umya-spreadsheet = "2.2"
headless_chrome = "1"
tempfile = "3.19.0"

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "skip"
