[package]
name = "bingo"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/RoloEdits/tog-discord-bingo"

[dependencies]
mimalloc = "0.1.48"
eframe = "0.33"
egui_extras = "0.33"
image = "0.25"
umya-spreadsheet = "2.3"
rfd = "0.17"
resvg = "0.47"

[profile.release]
opt-level = "s"
strip = "symbols"
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
